--- a/index.html
+++ b/index.html
@@ -49,7 +49,10 @@
       </h2>
       <h2 class="title">Saya praktisi : <span class="text-typing"></span></h2>
       <p class="btn">
-        <a target="_blank" href="./file/CV_Andri Firmansyah.pdf" download="cv"
+        <a
+          target="_blank"
+          href="./file/CV_Andri Firmansyah.pdf"
+          download="cv_Andri"
           >Download CV</a
         >
       </p>
