--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
     </nav>
     <!-- ==================== -->
 
-    <!-- main -->
-    <main id="home">
+    <!-- home -->
+    <section id="home">
       <img
         class="foto"
         src="./img/new profile.jpg"
@@ -79,10 +79,10 @@
       <!-- shape -->
       <img src="./img/shape6.png" id="shape1" />
       <img src="./img/shape2.png" id="shape2" />
-    </main>
+    </section>
     <!-- ==================== -->
 
-    <!-- section-about -->
+    <!-- about -->
     <section class="about" id="about">
       <div class="container-about">
         <h2 class="title-about">Tentang <span>Saya</span></h2>
@@ -102,7 +102,7 @@
     </section>
     <!-- ==================== -->
 
-    <!-- section skills -->
+    <!-- skills -->
     <section class="skills" id="skills">
       <div class="container-skills">
         <h2 class="title-skill"><span>Kemampuan</span> Saya</h2>
@@ -144,7 +144,7 @@
     </section>
     <!-- ==================== -->
 
-    <!-- section sertifikat -->
+    <!-- sertifikat -->
     <section class="sertifikat" id="sertifikat">
       <h2 class="title-sertif">Sertifikat <span>Pencapaian</span></h2>
       <div class="container-sertifikat">
@@ -223,7 +223,7 @@
     </section>
     <!-- ==================== -->
 
-    <!-- section contact -->
+    <!-- contact -->
     <section class="contact" id="contact">
       <h2 class="title-kontak"><span>Kontak</span> Saya</h2>
       <h3 class="desc-kontak">
